sort.pancake.GatesPancake.scala.error
Compilation error:
GatesPancake:2: error: too many arguments for method isSelected: ()Boolean
  if(isSelected("world'8 pancakes'")){
               ^